--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<!-- Flash poruka -->
-<% flash.each do |name, msg| %>
-  <ul>
-    <li>
-    <%= msg %>
-    </li>
-  </ul>
-<% end %>
-<%= yield %>
-
+  <%= render 'layouts/messages' %>
+  <%= yield %>
 </body>
 </html>
