--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 
-<h1>This is the homepage</h1>
-<%= link_to 'About', about_path %> |
-<%= link_to 'Alpha Blog', articles_path %>
+<div class = "center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to 'Signup now', "#", class: "btn btn-danger btn-xlarge" %>
+</div>
